--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@
 /* Elements */ 
 html, body { width:100%;height:100%;
 font-family: 'Roboto', sans-serif; }
+ul, li, a, h1, h2, h3, h4 { margin:none;padding:none; }
 
-.header-container {
+.header {
     text-align: center;
     padding-top:45px;
 }
 
-.title {
+.header .title {
     color:white;
     font-size:47pt;
 }
 
-.footer-container {
+.footer {
     position:absolute;
     bottom:25px;
     color:white;
@@ -23,6 +24,19 @@ font-family: 'Roboto', sans-serif; }
     width:100%;
 }
 
-.current-color {
+.footer .color {
     font-size:21pt;
+}
+
+.footer .social, a {
+    color:white;
+    text-decoration:none;
+    font-weight: bold;
+}
+
+.footer .social li {
+    font-weight: 300;
+    list-style: none;
+    display:inline;
+    margin-right:25px;
 }
