--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 /* Elements */ 
 html, body { width:100%;height:100%;
-font-family: 'Roboto', sans-serif; }
+font-family: 'Roboto', sans-serif;-webkit-font-smoothing: antialiased; }
 ul, li, a, h1, h2, h3, h4 { margin:none;padding:none; }
 
 .header {
