--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* Elements */ 
 html, body { width:100%;height:100%;
 font-family: 'Roboto', sans-serif;-webkit-font-smoothing: antialiased; }
-ul, li, a, h1, h2, h3, h4 { margin:none;padding:none; }
+* { margin:0;padding:0; }
 
 .header {
     text-align: center;
