--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Fonts */
 @import url(http://fonts.googleapis.com/css?family=Roboto:300);
 
-/* Reset.css made by Eric Meyer
+/* START: reset.css
    http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -51,19 +51,53 @@ table {
 	border-spacing: 0;
 }
 
-/* Elements */ 
+/* END: reset.css
+   Elements 
+*/ 
 html, body { width:100%;height:100%;
 font-family: 'Roboto', sans-serif;-webkit-font-smoothing: antialiased; }
 
+section#main {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    background-position: 50% 50%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    position: relative;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+
 .header {
     text-align: center;
-    padding-top:10%;
+    margin-top: -100px;
 }
 
 .header .title {
     color:white;
     font-size:89pt;
     font-weight:100;
+}
+
+.header .color {
+    font-size: 21pt;
+    color: white;
+    line-height: 1.5;
+    margin-top:15px;
 }
 
 .footer {
@@ -74,8 +108,8 @@ font-family: 'Roboto', sans-serif;-webkit-font-smoothing: antialiased; }
     width:100%;
 }
 
-.footer .color {
-    font-size:21pt;
+.footer .social {
+    margin-top:45px;
 }
 
 .footer .social, a {
