--- a/style.css
+++ b/style.css
@@ -54,8 +54,13 @@ table {
 /* END: reset.css
    Elements 
 */ 
-html, body { width:100%;height:100%;
-font-family: 'Roboto', sans-serif;-webkit-font-smoothing: antialiased; }
+html, body { 
+    width:100%;
+    height:100%;
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 300;
+}
 
 section#main {
     width: 100%;
@@ -82,6 +87,16 @@ section#main {
     background-repeat: no-repeat;
 }
 
+.bold {
+    font-weight: 700;
+}
+
+.heading--title {
+    color: #fff;
+    font-size: 16pt;
+    margin-bottom: 50px;
+}
+
 .header {
     text-align: center;
     margin-top: -100px;
@@ -94,10 +109,11 @@ section#main {
 }
 
 .header .color {
-    font-size: 21pt;
+    font-size: 24pt;
     color: white;
     line-height: 1.5;
-    margin-top:15px;
+    clear: both;
+    margin-top:10px;
 }
 
 .footer {
@@ -122,5 +138,16 @@ section#main {
     font-weight:300;
     list-style: none;
     display:inline;
-    margin-right:25px;
+    padding:10px;
+}
+
+@media (max-width:720px) {
+    .header .title {
+        font-size: 40pt;
+    }
+    
+    .header .color {
+        font-size: 25px;
+        line-height: 2;
+    }
 }
