--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ html, body {
     font-weight: 300;
 }
 
+.bold {
+    font-weight: 700;
+}
+
+    /* Clock part (header) */
+
 section#main {
     width: 100%;
     height: 100%;
@@ -87,22 +93,18 @@ section#main {
     background-repeat: no-repeat;
 }
 
-.bold {
-    font-weight: 700;
-}
-
-.heading--title {
-    color: #fff;
-    font-size: 16pt;
-    margin-bottom: 50px;
-}
-
 .header {
     text-align: center;
     margin-top: -100px;
 }
 
 .header .title {
+    color: #fff;
+    font-size: 16pt;
+    margin-bottom: 50px;
+}
+
+.header .time {
     color:white;
     font-size:89pt;
     font-weight:100;
@@ -115,6 +117,8 @@ section#main {
     clear: both;
     margin-top:10px;
 }
+
+    /* Footer */
 
 .footer {
     position:absolute;
@@ -131,7 +135,7 @@ section#main {
 .footer .social, a {
     color:white;
     text-decoration:none;
-    font-weight:bold;
+    font-weight:700;
 }
 
 .footer .social li {
@@ -140,6 +144,8 @@ section#main {
     display:inline;
     padding:10px;
 }
+
+    /* Media */
 
 @media (max-width:720px) {
     .header .title {
